--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 data/*
 !data/*.gz
+!data/lab-03-data/part2/*
 src/__pycache__/wagner_fisher.cpython-37.pyc
 src/.ipynb_checkpoints/lab_02_object_description-checkpoint.ipynb
