Code ready to predict

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ src/__pycache__/wagner_fisher.cpython-37.pyc
 src/.ipynb_checkpoints/lab_02_object_description-checkpoint.ipynb
 project/.DS_Store
 .DS_Store
+*.json
