--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,4 @@ project/data/1/output/*
 project/data/2/output/*
 project/data/3/output/*
 project/data/4/output/*
+project/src/__pycache__/utils.cpython-37.pyc
